# usb-passthrough

./: .dockerignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PROTOCOL.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  rustfmt.toml
.claude/: settings.json
.claude/skills/release/: SKILL.md
.claude/skills/tdd/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: android-build.yml  benchmark.yml  ci.yml  docker.yml  e2e-linux.yml  release.yml  windows-installer.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/anyplug/: AnyPlugService.kt  MainActivity.kt
android/app/src/main/java/com/anyplug/client/: UsbIpClient.kt
android/app/src/main/java/com/anyplug/server/: UsbIpServer.kt
android/app/src/main/java/com/anyplug/theme/: AnyPlugColors.kt  AnyPlugShapes.kt  AnyPlugTheme.kt  AnyPlugType.kt
android/app/src/main/java/com/anyplug/ui/: DevicePickerSheet.kt  MainScreen.kt
android/app/src/main/java/com/anyplug/ui/components/: AnyPlugComponents.kt
android/app/src/main/res/values/: themes.xml
android/app/src/main/res/xml/: device_filter.xml
android/app/src/test/java/com/anyplug/: AnyPlugServiceWakeLockTest.kt
android/common/: build.gradle.kts
android/core/: build.gradle.kts
android/core/src/main/: AndroidManifest.xml
android/core/src/main/java/com/anyplug/: AnyPlugService.kt  UsbPermissionHandler.kt  UsbUtils.kt  WakeLockManager.kt
android/core/src/main/java/com/anyplug/bridge/: RustBridge.kt
android/core/src/main/java/com/anyplug/discovery/: LastKnownServerStore.kt  RestProbe.kt  ServerDiscovery.kt  ServerEndpoint.kt  SubnetScanner.kt
android/core/src/main/java/com/anyplug/model/: DeviceModels.kt
android/core/src/test/java/com/anyplug/discovery/: ServerDiscoveryTest.kt
android/fastlane/metadata/android/en-US/: full_description.txt  privacy-policy.md  short_description.txt  title.txt
android/fastlane/metadata/android/en-US/images/: PLACEHOLDER.md
android/rust/usbip-android/: Cargo.toml
android/rust/usbip-android/src/: lib.rs
android/tv/: build.gradle.kts  proguard-rules.pro
android/tv/src/main/: AndroidManifest.xml
android/tv/src/main/java/com/anyplug/tv/: AnyPlugTvInputService.kt  TvMainActivity.kt
android/tv/src/main/java/com/anyplug/tv/theme/: TvColors.kt  TvShapes.kt  TvTheme.kt  TvType.kt
android/tv/src/main/java/com/anyplug/tv/ui/: TvComponents.kt  TvFocusUtils.kt  TvLeanbackScreen.kt
android/tv/src/main/res/values/: themes.xml
android/tv/src/test/java/com/anyplug/tv/ui/: TvLeanbackScreenTest.kt
ci/: boot-qemu.sh  build-initramfs.sh  build-kernel.sh  e2e-test.sh  gen-changelog.sh  test-all-gadgets.sh  test-hid-keyboard.sh
ci/kernel/: config
client/usbip-client/: Cargo.toml
client/usbip-client/src/: client.rs  daemon.rs  discovery.rs  lib.rs  main.rs  reconnect.rs
client/usbip-client/src/vhci/: mod.rs  vhci_linux.rs  vhci_windows.rs
deploy/: usbip-client.service
docs/: ANDROID-TV.md  BUILDING.md  DOCKER.md  G920-SPECIFIC.md  PERFORMANCE.md  SETUP.md  TROUBLESHOOTING.md
docs/adr/: 0001-usb-ip-protocol.md  0002-v1-device-scope.md  0003-reliability-ordering.md  0004-v1-scope.md  0005-hotplug-detection.md
docs/api/: PORTS.md  openapi.json
homeassistant/addon/: CHANGELOG.md  Dockerfile  README.md  build.yaml  config.yaml  run.sh
installer/windows/: anyplug.nsi
packaging/lakka/: install.sh
packaging/raspberry-pi/: server-setup.sh
packaging/retropie/: install.sh
packaging/steamlink/: install.sh
server/usbip-server/: Cargo.toml  com.anyplug.usbip-server.plist  usbip.entitlements
server/usbip-server/benches/: forward_bench.rs
server/usbip-server/src/: api.rs  bandwidth.rs  batcher.rs  crypto_stream.rs  discovery.rs  hotplug.rs  iokit_backend.rs  lib.rs  main.rs  metrics.rs  server.rs  urb_executor.rs  usb.rs  usb_backend.rs
server/usbip-server/tests/: api.rs  api_test.rs  encryption_wire_test.rs  hotplug_integration.rs  server_wire_test.rs
shared/usbip-core/: Cargo.toml
shared/usbip-core/benches/: urb_pool_bench.rs
shared/usbip-core/src/: crypto.rs  descriptor.rs  error.rs  lib.rs  pool.rs  protocol.rs  reply.rs  urb.rs
shared/usbip-core/tests/: descriptor_fixtures.rs
shared/usbip-core/tests/fixtures/: README.md
shared/usbip-core/tests/fixtures/g920/: metadata.toml
shared/usbip-core/tests/fixtures/g920_mismatch/: metadata.toml
shared/usbip-core/tests/fixtures/hid_keyboard/: metadata.toml
web/: package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
web/src/app/: layout.tsx  page.tsx
web/src/app/scan/: page.tsx
web/src/components/: ConfigEditor.tsx  ConnectionManager.tsx  FirstLaunchDialog.tsx  LatencyDashboard.tsx  Layout.tsx  ScanPanel.tsx
web/src/contexts/: ServerUrlContext.tsx
web/src/lib/: api.ts  target.ts  types.ts
web/src/tests/: ConfigEditor.test.ts  api.test.ts  target.test.ts
windows/: Cargo.toml
windows/src/: actions.rs  main.rs  windows_usb.rs
