[package]
name = "anyplug"
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/stanvx/anyplug"
description = "AnyPlug — Windows service + GUI tray client"

[[bin]]
name = "anyplug"
path = "src/main.rs"

[dependencies]
# Workspace shared crate
usbip-core = { path = "../shared/usbip-core" }
usbip-server = { path = "../server/usbip-server" }
usbip-client = { path = "../client/usbip-client" }

# Standard deps (versions match workspace root; crate is not a workspace member)
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async runtime
futures = "0.3"
anyhow = "1"
thiserror = "1"

# Windows service
windows-service = "0.8"

# Win32 API (SetupAPI, WinUSB)
winapi = { version = "0.3", features = [
    "setupapi",
    "winusb",
    "ioapiset",
    "handleapi",
    "synchapi",
    "winbase",
    "winnt",
    "cfgmgr32",
    "devguid",
    "usb",
    "usbioctl",
    "ntdef",
    "minwindef",
    "lmapibuf",
] }

# GUI
eframe = { version = "0.27", features = ["default"] }
egui = "0.27"
egui-wgpu = "0.27"

# System tray
tray-icon = "0.17"

# IPC channel (for tray <-> service communication)
crossbeam-channel = "0.5"

# Configuration
dirs = "5"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
panic = "abort"
