[package]
name = "usbip-client"
version.workspace = true
edition = "2021"
license.workspace = true
description = "USB/IP client — imports USB devices over the network"

[[bin]]
name = "usbip-client"
path = "src/main.rs"

[dependencies]
usbip-core = { path = "../../shared/usbip-core" }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
thiserror = { workspace = true }
mdns-sd = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
ring = { workspace = true }
byteorder = { workspace = true }
zerocopy = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true }
