[package]
name = "usbip-server"
version.workspace = true
edition = "2021"
license.workspace = true
description = "USB/IP server — exports USB devices over the network"

[[bin]]
name = "usbip-server"
path = "src/main.rs"

[[bin]]
name = "usbip-bench"
path = "src/bin/benchmark.rs"

[dependencies]
usbip-core = { path = "../../shared/usbip-core" }
zerocopy = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
thiserror = { workspace = true }
rusb = { workspace = true }
mdns-sd = { workspace = true }
clap = { workspace = true }
anyhow = "1"
gethostname = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
ring = { workspace = true }
byteorder = { workspace = true }
uuid.workspace = true
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
futures = { workspace = true }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
chrono = { workspace = true }
tower = { workspace = true }
prometheus = { version = "0.13", features = ["process"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion.workspace = true
tempfile = "3"
tokio-tungstenite = "0.24"

[[bench]]
name = "forward_bench"
harness = false
