[package]
name = "usbip-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "USB/IP protocol types and serialization — shared between server, client, and Android JNI"

[dependencies]
byteorder.workspace = true
zerocopy = { workspace = true, features = ["derive"] }
crc32fast.workspace = true
thiserror.workspace = true
tracing.workspace = true
ring.workspace = true
uuid.workspace = true
crossbeam.workspace = true
rand.workspace = true

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[target.'cfg(not(target_os = "android"))'.dependencies]
rusb.workspace = true
